# Arduino-CMake-Toolchain

./: .gitignore  Arduino-toolchain.cmake
Arduino/System/: PackagePathIndex.cmake
Examples/: CMakeLists.txt
Examples/01_hello_world/: CMakeLists.txt
Examples/02_arduino_lib/: CMakeLists.txt
Examples/03_portable_app/: CMakeLists.txt  portable_app.cpp
Examples/04_multi_app/: CMakeLists.txt
Examples/05_auto_link/: CMakeLists.txt
